Fri 20 Jul 2001 09:15:00  Mark Bradshaw <bradshaw@staff.crosswalk.com>

	* dir.cc (readdir): Protect FindNextFileA against INVALID_HANDLE_VALUE.

Wed 18 Jul 2001 01:00:47 PM EDT  Christopher Faylor <cgf@cygnus.com>

	* cygheap.cc (_cmalloc): Use correct constants for size calculation.
	* dcrt0.cc (dll_crt0_1): Move uid initialization earlier.
	* fork.cc (fork_parent): Move cygheap_setup_in_child to just prior to
	CreateProcess so that all contents of cygheap are copied.
	* spawn.cc (spawn_guts): Ditto.

Wed 18 Jul 2001 12:54:17  Corinna Vinschen <corinna@vinschen.de>

	* security.cc (get_user_groups): Call Net function with NULL server
	name under specific error conditions.
	(is_group_member): Ditto.
	(get_user_local_groups): Ditto.
	(get_user_primary_group): Ditto.

Wed 18 Jul 2001 11:56:00  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (_unlink): Explicitely check for non-existant file.

Tue 17 Jul 2001 10:19:00  Corinna Vinschen <corinna@vinschen.de>

	* delqueue.h: Remove obsolete file.

Mon 16 Jul 2001 10:47:17 PM EDT  Christopher Faylor <cgf@cygnus.com>

	* child_info.h: Bump magic number.
	(class child_info): Add an element.
	* cygheap.cc (init_cheap): Allocate cygwin heap in shared memory area.
	(cygheap_fixup_in_child): Map cygwin heap, passed from parent via
	shared memory into correct address.
	(cygheap_setup_for_child): New function.
	* cygheap.h: Declare new functions.
	* dcrt0.cc (dll_crt0_1): Accomodate new cygheap_fixup_in_child
	arguments.  Avoid protecting subproc_ready unless it is spawn/nowait.
	* fork.cc (fork_parent): Use new cygheap_setup_for_child function to
	setup cygwin heap info.  Close passed cygheap shared memory handle.
	* spawn.cc (spawn_guts): Ditto.  Also, reorganize to avoid
	synchronization between parent and child in non-P_OVERLAY case.
	* sigproc.cc (wait_sig): Only signal subproc_ready when execing.

Mon 16 Jul 2001 15:21:00  Corinna Vinschen <corinna@vinschen.de>

	* grp.cc: Add missing Copyright date 2001.
