@@ -1542,7 +1542,9 @@ fhandler_base::set_inheritance (HANDLE &h, int not_inheriting, const char *namep
 void
 fhandler_base::fork_fixup (HANDLE parent, HANDLE &h, const char *name)
 {
-  if (!DuplicateHandle (parent, h, hMainProc, &h, 0, !get_close_on_exec (),
+  if (!get_close_on_exec ())
+    debug_printf ("handle %p already opened", h);
+  else if (!DuplicateHandle (parent, h, hMainProc, &h, 0, !get_close_on_exec (),
 			DUPLICATE_SAME_ACCESS))
     system_printf ("%s - %E, handle %s<%p>", get_name (), name, h);
 }
